--- a/.travis.yml
+++ b/.travis.yml
@@ -15,22 +15,22 @@ os:
 
 matrix:
   include:
-    - env: C_COMPILER=gcc-7 CXX_COMPILER=g++-7 TARGET_CPU=x64 BUILD_CONFIGURATION=Release
-      addons: &gcc7
+    - env: C_COMPILER=gcc-8 CXX_COMPILER=g++-8 TARGET_CPU=x64 BUILD_CONFIGURATION=Release
+      addons: &gcc8
         apt:
           sources:
             - sourceline: 'ppa:ubuntu-toolchain-r/test'
           packages:
-            - g++-7
+            - g++-8
 
-    - env: C_COMPILER=gcc-7 CXX_COMPILER=g++-7 TARGET_CPU=x86 BUILD_CONFIGURATION=Release
-      addons: *gcc7
+    - env: C_COMPILER=gcc-8 CXX_COMPILER=g++-8 TARGET_CPU=x86 BUILD_CONFIGURATION=Release
+      addons: *gcc8
 
-    - env: C_COMPILER=gcc-7 CXX_COMPILER=g++-7 TARGET_CPU=x64 BUILD_CONFIGURATION=Debug
-      addons: *gcc7
+    - env: C_COMPILER=gcc-8 CXX_COMPILER=g++-8 TARGET_CPU=x64 BUILD_CONFIGURATION=Debug
+      addons: *gcc8
 
-    - env: C_COMPILER=gcc-7 CXX_COMPILER=g++-7 TARGET_CPU=x86 BUILD_CONFIGURATION=Debug
-      addons: *gcc7
+    - env: C_COMPILER=gcc-8 CXX_COMPILER=g++-8 TARGET_CPU=x86 BUILD_CONFIGURATION=Debug
+      addons: *gcc8
 
 #    - env: C_COMPILER=clang-5.0 CXX_COMPILER=clang++-5.0 TARGET_CPU=x64 BUILD_CONFIGURATION=Release
 #      addons: &clang50
@@ -82,7 +82,7 @@ before_script:
        wget http://launchpadlibrarian.net/297657456/libsdl2-dev_2.0.5+dfsg1-1ubuntu1_i386.deb;
        sudo dpkg -i *.deb;
        sudo apt-get -f -y install;
-       CFLAGS="-m32 -march=native" CXXFLAGS="-m32 -march=native" cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DCMAKE_ASM_FLAGS=-m32;
+       CFLAGS="-m32" CXXFLAGS="-m32" cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DCMAKE_ASM_FLAGS=-m32;
     fi
 
 script:
